# tradingflow

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  test.yml
benches/: bench_add.py  bench_add.rs  bench_scenario.rs
design/: 20260413.md  20260414.md  20260415.md
docs/: index.md
docs/operators/: index.md  metrics.md  signals.md  simulators.md
docs/sources/: index.md
examples/: factor_model_backtest.py
native/: Cargo.toml  pyproject.toml
native/src/: bench.rs  input.rs  lib.rs  observable.rs  operator.rs  scenario.rs  series.rs
native/src/operators/: apply.rs  filter.rs  mod.rs  select.rs  stack.rs  where.rs
python/: .gitignore  zensical.toml
python/benches/: bench_add.py
python/docs/: index.md  operator.md  scenario.md  schema.md  source.md  types.md  views.md
python/docs/operators/: apply.md  cast.md  concat.md  const.md  filter.md  id.md  indicators.md  lag.md  last.md  num.md  portfolios.md  predictors.md  record.md  rolling.md  select.md  stack.md  where.md
python/docs/sources/: array_source.md  clock.md  csv_source.md  iter_source.md
python/examples/: covariance_gmv.py  factor_ic.py  mean_strategy.py  mean_variance_strategy.py  plot_daily_price.py  plot_financial_data.py  plot_total_market_cap.py  stocks.py
python/scripts/: gen_docs_stubs.py
python/src/tradingflow/: __init__.py  _utils.py  operator.py  scenario.py  schema.py  series.py  source.py  types.py  utils.py  views.py
python/tests/: test_bridge.py  test_notify.py  test_operators.py  test_scenario.py  test_schema.py  test_sources.py  test_utils.py
python/tradingflow/: __init__.py  operator.py  scenario.py
python/tradingflow/operators/: apply.py  where.py
python/tradingflow/sources/: __init__.py  array_bundle_source.py  csv_source.py
src/: __init__.py  array.rs  bench.rs  bridge.rs  event.py  lib.rs  observable.rs  operator.py  operator.rs  refs.rs  scenario.py  scenario.rs  series.py  series.rs  source.py  source.rs  store.rs  types.rs
src/bridge/: benches.rs  dispatch.rs  mod.rs  operator.rs  operators.rs  scenario.rs  source.rs  sources.rs  views.rs
src/data/: array.rs  inputs.rs  mod.rs  series.rs  time.rs
src/experimental/: adapter.rs  design.md  graph.rs  mod.rs  operator.rs  scenario.rs  scheduler.rs  source.rs  storage.rs
src/experimental/operators/: add.rs  diff.rs  id.rs  mod.rs  multiply.rs
src/experimental_alt/: comparison.md  data.rs  design.md  mod.rs  operator.rs  queue.rs  source.rs
src/experimental_alt/operators/: add.rs  (+9 more)
src/operators/: apply.rs  cast.rs  clocked.rs  concat.rs  const.rs  filter.rs  id.rs  lag.rs  last.rs  map.rs  mod.rs  record.rs  select.rs  stack.rs  where.rs
src/ops/: __init__.py  apply.py  select.py
src/scenario/: graph.rs  handle.rs  mod.rs  node.rs  queue.rs  runner.rs
src/sources/: __init__.py  array_bundle_source.py  array_source.rs  async_callable_source.py  clock.rs  csv_source.py  csv_source.rs  iter_source.rs  mod.rs
src/tradingflow/: __init__.py  observable.py  operator.py  scenario.py  series.py  source.py
src/utils/: mod.rs  schema.rs
tests/: test_daily_market_snapshot_source.py  test_eastmoney_namespace.py  test_financial_reports.py  test_operators.py  test_ops.py  test_scenario.py  test_sources.py
(+232 files in other folders)
