[package]
name = "tradingflow"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
ndarray = "0.17.2"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
chrono = "0.4"
chrono-tz = "0.10"
pyo3 = { version = "0.28.2", features = ["extension-module"], optional = true }
numpy = { version = "0.28.0", optional = true }
num-traits = "0.2.19"
csv = "1.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "bench_add"
harness = false

[[bench]]
name = "bench_scenario"
harness = false
