# See: https://github.com/pypa/sampleproject/blob/main/pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingflow"
version = "0.1.0"
description = "A lightweight library for quantitative investment research."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
viz = ["matplotlib", "streamlit[charts]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
