[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tradingflow"
version = "0.1.0"
description = "A lightweight library for quantitative investment research."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
docs = ["zensical", "mkdocstrings-python"]
viz = ["matplotlib", "streamlit[charts]"]

[tool.maturin]
features = ["pyo3/extension-module", "python"]
python-source = "python/src"
module-name = "tradingflow._native"

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.black]
line-length = 120
