[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tradingflow"
version = "0.1.0"
description = "A lightweight library for quantitative investment research."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=2.4", "pandas>=3.0", "cvxpy"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
docs = ["zensical", "mkdocstrings-python"]
examples = [
    "a-shares-crawler@git+https://github.com/bridgekat/a-shares-crawler.git@35169561c5ca89637be539d2a438055ac966aa33",
    "matplotlib",
    "streamlit[charts]",
    "tqdm",
]

[tool.maturin]
features = ["pyo3/extension-module", "python"]
python-source = "python/src"
module-name = "tradingflow._native"

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.black]
line-length = 120
