[package]
name = "tradingflow"
version = "0.1.0"
edition = "2024"

[lib]
name = "tradingflow_native"
crate-type = ["lib", "cdylib"]

[features]
default = []
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
ndarray = "0.17.2"
tokio = { version = "1", features = ["rt", "sync", "macros"] }

pyo3 = { version = "0.28.2", features = ["extension-module"], optional = true }
numpy = { version = "0.28.0", optional = true }
